--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@clerk/localizations": "^3.3.0",
     "@clerk/nextjs": "^5.7.5",
     "@hookform/resolvers": "^3.9.0",
-    "@lexical/headless": "^0.18.0",
+    "@knocklabs/node": "^0.6.13",
+    "@knocklabs/react": "^0.2.29",
     "@lexical/react": "^0.18.0",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -42,7 +44,6 @@
     "react-hook-form": "^7.53.1",
     "react-intersection-observer": "^9.13.1",
     "sonner": "^1.5.0",
-    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
